--- a/sites/all/themes/comment/styles/framework/960-9.css
+++ b/sites/all/themes/comment/styles/framework/960-9.css
@@ -2,7 +2,7 @@
 /**
  * @file 960.css
  * Core CSS for 16 column 960 Grid System.
- * Learn more - http://960.gs
+ * Learn more - https://960.gs
  *
  * $Id: 960.css,v 1.1.2.2 2009/08/01 17:58:31 shannonlucas Exp $
  */
