--- a/sites/all/themes/comment/styles/style-9.css
+++ b/sites/all/themes/comment/styles/style-9.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 
 /* @file style.css
- * General styles for Nitobe. http://drupal.org/projects/nitobe
+ * General styles for Nitobe. https://drupal.org/projects/nitobe
  *
  * $Id: style.css,v 1.1.2.2 2009/08/01 17:58:31 shannonlucas Exp $
  */
